# LearnApisix

./: .gitignore
chapter01/: README.md
chapter01/apisix-demo/: README.md  pyproject.toml
chapter01/apisix-demo/apid/: apisix.py
chapter01/apisix-demo/tests/: test_apisix.py
chapter01/apisix-discovery/: README.md  config.yaml
chapter01/apisix-discovery/smart_consul/: init.lua
chapter01/app-demo/: README.md  canary.proto  pyproject.toml
chapter01/app-demo/canary/: canary_pb2.py  canary_pb2.pyi  canary_pb2_grpc.py  config.py  consul_util.py  gray.py  logger_setup.py  normal.py  service.py  util.py
chapter01/app-demo/tests/: test_consul_util.py  test_grpc.py
